[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
signal-hook = "0.3.15"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["tokio-macros", "tracing", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
pbft-core = { path = "../pbft-core" }
crypto = { path = "../crypto" }
hyper = "0.14.27"
hex = "0.4.3"
futures = "0.3.28"
