[package]
name = "pbft-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk = { path = "../../monorepo/zk" }
l0 = { path = "../../monorepo/l0" }
config = "0.13.3"
futures = "0.3.28"
base64 = "0.21"
rand = "0.7"
anyhow = "1.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
crypto = { path = "../crypto" }
blst = { git = "https://github.com/supranational/blst", branch = "master" }
async-trait = "0.1"
hex = "0.4.3"
bincode = "1.3.3"
libp2p = { version = "0.55", features = [
    "serde",
    "tokio",
    "kad",
    "ping",
    "identify",
    "noise",
    "yamux",
    "tcp",
    "request-response",
    "cbor",
] }
num-traits = "0.2.19"
sha2 = "0.10.9"

[dev-dependencies]
lazy_static = "1.4.0"
